--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ nav a:hover {
 
 /* Style the About section */
 .about {
-  background-image: url('https://assets.dcoder.tech/63fb3e0aae1ce02334cf46df/6421b8f3ae1ce02334e955f7/e3de260dfb9fe0cdbea6e019564106d00979be2d.jpg') ;
+  background-image: url("https://assets.dcoder.tech/63fb3e0aae1ce02334cf46df/6424537441fbf339d2158baf/Screenshot_20230323_150344_com.google.android.apps.docs_edit_61493098646866.jpg" ) ;
   padding: 50px 0;
   background-size: cover ;
   
