--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ nav a:hover {
 
 /* Style the hero section */
 .hero {
-  background-image: url("https://assets.dcoder.tech/63fb3e0aae1ce02334cf46df/6424537441fbf339d2158baf/Screenshot_20230323_150344_com.google.android.apps.docs_edit_61493098646866.jpg ");
+  background-image: url("https://assets.dcoder.tech/63fb3e0aae1ce02334cf46df/6424537441fbf339d2158baf/Screenshot_20230323_150344_com.google.android.apps.docs_edit_61493098646866.jpg " );
   background-size: cover;
   background-position: center;
   height: 500px;
@@ -112,7 +112,7 @@ nav a:hover {
 
 /* Style the About section */
 .about {
-  background-image: url("https://assets.dcoder.tech/63fb3e0aae1ce02334cf46df/6424537441fbf339d2158baf/Screenshot_20230323_150344_com.google.android.apps.docs_edit_61493098646866.jpg" ) ;
+  background-image: url("https://assets.dcoder.tech/63fb3e0aae1ce02334cf46df/6424537441fbf339d2158baf/e3de260dfb9fe0cdbea6e019564106d00979be2d.jpg " ) ;
   padding: 50px 0;
   background-size: cover ;
   
