--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ nav a:hover {
     <li><a href="https://www.facebook.com/Trypium?mibextid=ZbWKwL">Home</a></li> 
     <li><a href="#">About Us</a></li> 
     <li><a href="#">Tours</a></li> 
-    <li><a href="content://com.paprbit.dcoder.fileprovider/files/temp.html">Contact Us</a></li> 
+    <li><a href="http://wa.me/201222202776">Contact Us</a></li> 
    </ul> 
   </nav> 
   <main> 
